# Rubiks-Cube-Solver

./: CMakeLists.txt  main.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp
Solver/: BFSSolver.h  DFSSolver.h  IDDFSSolver.h
